--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Alarms for Flock",
   "main": "index.js",
   "scripts": {
+	"start": "npm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Riva FZC",
