--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.14.1",
     "flockos": "0.0.6",
-    "mustache": "^2.3.0"
+    "mustache": "^2.3.0",
+    "pg": "^8.2.1"
   }
 }
